# sud-regex

./: .flake8  .gitignore  LICENSE  README.md  notebook_tutorial.ipynb  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py
.github/workflows/: lint.yml
SUDRegex/: __init__.py  checklist.py  cli.py  helper.py
sudregex/: __init__.py  checklist.py  cli.py  helper.py  termslist.py  validation.py
unittests/: conftest.py  fail_checklist.py  test_helper.py  test_init.py  test_regression_golden.py
