[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sudregex"
version = "0.1.4"
description = "Regex-driven extraction with negation for clinical text (SUD-focused)."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Quantitative Nurse Lab", email = "quantitativenurse@gmail.com" }]
dependencies = [
  "pandas>=1.5",
  "numpy>=1.21",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
  "black==25.1.0",
  "flake8==7.3.0",
  "isort==6.0.1",
  "pytest",
  "build",
  "twine",
]
viz = ["matplotlib>=3.6"]
yaml = ["pyyaml>=6"]
parallel = ["pandarallel>=1.6"]     # optional: for --parallel / n_workers
all = ["matplotlib>=3.6", "pyyaml>=6", "pandarallel>=1.6"]  # include parallel 

[project.scripts]
sudregex = "sudregex.cli:main"

[project.urls]
Homepage = "https://github.com/quantitativenurse/sud-regex"
Issues = "https://github.com/quantitativenurse/sud-regex/issues"

[tool.setuptools.packages.find]
include = ["sudregex*"]

[tool.black]
line-length = 120
target-version = ["py311"]
exclude = '\.ipynb$'


[tool.isort]
profile = "black"
line_length = 120
